buggy on iOs...

--- a/final.css
+++ b/final.css
@@ -1,5 +1,13 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 :root {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background: #066f2f;
@@ -26,18 +34,27 @@ h1 {
 
 .game-view {
   height: 100vh;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: 7% 7% 1fr;
   grid-template-rows: 7% 7% 1fr;
 }
 
 .hud {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0.2em;
   background-color: var(--hud-color);
   color: var(--hud-text);
-  box-shadow: 15px 0px 15px #000c;
+  -webkit-box-shadow: 15px 0px 15px #000c;
+          box-shadow: 15px 0px 15px #000c;
 }
 
 .banner {
@@ -47,30 +64,49 @@ h1 {
 }
 
 .banner-text {
+  -webkit-transition: all 0.4s linear;
+  -o-transition: all 0.4s linear;
   transition: all 0.4s linear;
 }
 
 .grid-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .grid {
+  display: -ms-grid;
   display: grid;
   gap: 3px 3px;
+  -ms-grid-columns: 20% 3px 20% 3px 20% 3px 20% 3px 20%;
   grid-template-columns: 20% 20% 20% 20% 20%;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background: #444;
-  box-shadow: 15px 15px 15px #000c;
+  -webkit-box-shadow: 15px 15px 15px #000c;
+          box-shadow: 15px 15px 15px #000c;
   width: var(--gridWidth);
   margin-top: 0.5em;
 }
 
 .grid-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .cell {
@@ -81,13 +117,17 @@ h1 {
   width: 100%;
   padding: .25em;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  -webkit-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
   font-weight: bold;
   font-size: 2.5em;
 }
 
 .btn:active {
-  transform: translateY(2px);
+  -webkit-transform: translateY(2px);
+      -ms-transform: translateY(2px);
+          transform: translateY(2px);
   background: var(--selected);
 }
 
